# AoC

./: .gitignore
2020/day1/: Cargo.toml
2020/day1/src/: main.rs
2020/day10/: Cargo.toml
2020/day10/src/: flat_node.rs  main.rs
2020/day11/: Cargo.toml
2020/day11/src/: cellular_automaton.rs  main.rs
2020/day12/: Cargo.toml
2020/day12/src/: actions.rs  main.rs  ship.rs
2020/day13/: Cargo.toml
2020/day13/src/: main.rs
2020/day14/: Cargo.toml
2020/day14/src/: main.rs  mask.rs  memory_manager.rs
2020/day2/: Cargo.toml
2020/day2/src/: main.rs  new_policy.rs  old_policy.rs
2020/day3/: Cargo.toml
2020/day3/src/: main.rs  map.rs  slope.rs
2020/day4/: Cargo.toml
2020/day4/src/: main.rs  passport.rs
2020/day5/: Cargo.toml
2020/day5/src/: binary_decoder.rs  main.rs  seat.rs
2020/day6/: Cargo.toml
2020/day6/src/: main.rs  people_group.rs
2020/day7/: Cargo.toml
2020/day7/src/: bag_rule.rs  bag_rules_set.rs  main.rs
2020/day8/: Cargo.toml
2020/day8/src/: code_runner.rs  instruction.rs  main.rs
2020/day9/: Cargo.toml
2020/day9/src/: invalid_numbers.rs  main.rs  weakness.rs
2021/: Cargo.toml
2021/src/: main.rs  reader.rs
2021/src/day1/: mod.rs
2021/src/day2/: mod.rs
2021/src/day3/: mod.rs
2021/src/day4/: bingo_board.rs  mod.rs
2021/src/day5/: line.rs  mod.rs
2021/src/day6/: mod.rs
2021/src/day7/: mod.rs
2021/src/day8/: mod.rs
2021/src/day9/: field.rs  mod.rs
