[package]
name = "day3"
version = "0.1.0"
authors = ["Pavel Laptov <pavel.laptov@ya.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.bitvec]
version = "0.20"
features = [
  "alloc",
  #"atomic",
  "std",
]